--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,9 @@ flutter:
     - assets/icon/icon_white.png
     - assets/img/pdf.png
     - assets/img/video.png
+    - assets/img/dir.png
+    - assets/img/code_file.png
+    - assets/img/file.png
     # - images/a_dot_burr.jpeg
     # - images/a_dot_ham.jpeg
 
