--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   media_kit_video: ^1.2.5
   media_kit_libs_video: ^1.0.5
   flutter_highlighting: ^0.9.0+11.8.0
+  rename_app: ^1.6.2
   
 
 
