name change + login ui

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-     "name": "SylcpnIo",
-     "short_name": "SylcpnIo",
+     "name": "SCloud",
+     "short_name": "SCloud",
      "start_url": ".",
      "display": "standalone",
      "background_color": "#hexcode",
