--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   provider: ^6.1.2
   file_picker: ^9.0.1
   http: ^1.3.0
-  flutter_downloader: ^1.12.0
   dio: ^5.8.0+1
   path_provider: ^2.1.5
   permission_handler: ^11.4.0
@@ -50,6 +49,7 @@ dependencies:
   media_kit_libs_video: ^1.0.5
   flutter_highlighting: ^0.9.0+11.8.0
   rename_app: ^1.6.2
+  web: ^1.1.1
   
 
 
