--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,21 +13,22 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: '11'
+          java-version: '17'
           
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          cache: true
           
       - name: Build APK
         run: flutter build apk --release
           
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: android-apk
           path: build/app/outputs/flutter-apk/app-release.apk
@@ -41,12 +42,13 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          cache: true
           
       - name: Build iOS
         run: flutter build ios --release --no-codesign
           
       - name: Upload iOS
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ios-app
           path: build/ios/Release
@@ -61,12 +63,13 @@ jobs:
         with:
           channel: 'stable'
           architecture: x64
+          cache: true
           
       - name: Build Windows
         run: flutter build windows --release
           
       - name: Upload Windows
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: windows-app
           path: build/windows/runner/Release
@@ -78,18 +81,20 @@ jobs:
       
       - name: Install Dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev
           
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          cache: true
           
       - name: Build Linux
         run: flutter build linux --release
           
       - name: Upload Linux
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: linux-app
           path: build/linux/x64/release/bundle
@@ -103,12 +108,13 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          cache: true
           
       - name: Build macOS
         run: flutter build macos --release
           
       - name: Upload macOS
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: macos-app
           path: build/macos/Build/Products/Release
