--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,29 +75,34 @@ jobs:
           path: build/windows/runner/Release
 
   build-linux:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev
-          
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          cache: true
-          
-      - name: Build Linux
-        run: flutter build linux --release
-          
-      - name: Upload Linux
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-app
-          path: build/linux/x64/release/bundle
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
+    
+    - name: Install Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          clang \
+          cmake \
+          ninja-build \
+          pkg-config \
+          libgtk-3-dev \
+          libmpv-dev  # Add this for media_kit
+    
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        channel: 'stable'
+        cache: true
+        
+    - name: Upgrade dependencies
+      run: flutter pub upgrade  # Fix outdated packages
+        
+    - name: Build Linux
+      run: |
+        flutter clean  # Clean previous builds
+        flutter build linux --release
 
   build-macos:
     runs-on: macos-latest
