--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,9 @@ jobs:
           cache: true
           
       - name: Build APK
-        run: flutter build apk --release
+        run: |
+          flutter pub get
+          flutter build apk --release
           
       - name: Upload APK
         uses: actions/upload-artifact@v4
@@ -45,7 +47,9 @@ jobs:
           cache: true
           
       - name: Build iOS
-        run: flutter build ios --release --no-codesign
+        run: |
+          flutter pub get
+          flutter build ios --release --no-codesign
           
       - name: Upload iOS
         uses: actions/upload-artifact@v4
@@ -66,7 +70,9 @@ jobs:
           cache: true
           
       - name: Build Windows
-        run: flutter build windows --release
+        run: |
+          flutter pub get
+          flutter build windows --release
           
       - name: Upload Windows
         uses: actions/upload-artifact@v4
@@ -75,34 +81,39 @@ jobs:
           path: build/windows/runner/Release
 
   build-linux:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install Dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          clang \
-          cmake \
-          ninja-build \
-          pkg-config \
-          libgtk-3-dev \
-          libmpv-dev  # Add this for media_kit
-    
-    - name: Set up Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable'
-        cache: true
-        
-    - name: Upgrade dependencies
-      run: flutter pub upgrade  # Fix outdated packages
-        
-    - name: Build Linux
-      run: |
-        flutter clean  # Clean previous builds
-        flutter build linux --release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            clang \
+            cmake \
+            ninja-build \
+            pkg-config \
+            libgtk-3-dev \
+            libmpv-dev \
+            mpv
+          
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: true
+          
+      - name: Build Linux
+        run: |
+          flutter pub upgrade
+          flutter clean
+          flutter build linux --release
+          
+      - name: Upload Linux
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-app
+          path: build/linux/x64/release/bundle
 
   build-macos:
     runs-on: macos-latest
@@ -116,7 +127,9 @@ jobs:
           cache: true
           
       - name: Build macOS
-        run: flutter build macos --release
+        run: |
+          flutter pub get
+          flutter build macos --release
           
       - name: Upload macOS
         uses: actions/upload-artifact@v4
