--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,14 +85,18 @@ jobs:
       - name: Build Windows
         run: flutter build windows --release
           
+      - name: Verify Build Output
+        run: dir build/windows/runner /s
+          
       - name: Upload Windows Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: windows-app
           path: |
-            build/windows/runner/**/Release/*.exe
-            build/windows/runner/**/Release/*.dll
-            build/windows/runner/**/Release/data/
+            build/windows/runner/x64/release/*.exe
+            build/windows/runner/x64/release/*.dll
+            build/windows/runner/x64/release/data/*
+            build/windows/runner/x64/release/flutter_assets/*
 
   build-linux:
     runs-on: ubuntu-latest
